[gd_scene load_steps=9 format=1]

[ext_resource path="res://entities/targeted_abilities/Roots.gd" type="Script" id=1]
[ext_resource path="res://resources/effects/root_static.png" type="Texture" id=2]
[ext_resource path="res://resources/effects/roots.png" type="Texture" id=3]
[ext_resource path="res://components/EffectModule.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 3.0

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.1, 0.280769, 0.526923, 1 )
colors = ColorArray( 1, 1, 1, 1, 0.992188, 1, 0, 1, 1, 0.515625, 0, 1, 1, 0, 0, 1, 0.320312, 0, 0, 1 )

[sub_resource type="Animation" id=3]

resource/name = "Grow"
length = 0.6
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.6 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ false, true ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Growth:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.6 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Growth:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.6 ), "transitions":FloatArray( 1.8025, 0.31864 ), "update":0, "values":[ 0, 12 ] }

[sub_resource type="Animation" id=4]

resource/name = "Shrink"
length = 0.6
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ false ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Growth:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.6 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Growth:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.6 ), "transitions":FloatArray( 2.14355, 1 ), "update":0, "values":[ 12, 0 ] }
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.6 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"kill" } ] }

[node name="Roots" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
offset = Vector2( 0, -3 )

[node name="Particles2D" type="Particles2D" parent="."]

visibility/visible = false
config/amount = 64
config/lifetime = 1.0
config/half_extents = Vector2( 3, 3 )
config/local_space = false
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )

[node name="Growth" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 3 )
offset = Vector2( 0, -3 )
vframes = 3
hframes = 4
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Grow = SubResource( 3 )
anims/Shrink = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="EffectModule" parent="." instance=ExtResource( 4 )]

effect_type = "earth"
amount = -1.0
is_buff = true
buff_time = 2.0
buff_tick_interval = 0.5

[node name="StunModule" parent="." instance=ExtResource( 4 )]

effect_type = "stun"
effect_stat = "movement_speed"
amount = 0.0
is_buff = true
buff_time = 2.0
buff_tick_interval = 0.0

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]


